<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:title="@string/tab_text_1"
        app:showAsAction="never"/>

    <item android:id="@+id/map"
        android:title="@string/tab_text_2"
        app:showAsAction="never"/>

    <item android:id="@+id/settings"
        android:title="@string/Settings"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/themes"
                android:title="@string/Themes"
                app:showAsAction="never"/>


            <item android:id="@+id/language"
                android:title="@string/language"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>